Closed
Bug 160312
Opened 23 years ago
Closed 23 years ago
Dragging Toolbar Bookmarks folder (from sidebar) to Bookmark toolbar results in crash [@ nsCOMPtr_base::begin_assignment(void)]
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Chimera0.4
People
(Reporter: chrispetersen, Assigned: sfraser_bugs)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
33.97 KB,
text/plain
|
Details |
Build: 2002-07-30-05
Platform: 0S X 10.1.5
Expected Result: Dragging folder to toolbar should simply be ignored
What I got: Application crashes
Steps to reproduce:
1) Launch Chimera and open sidebar
2) Drag Toolbar Bookmarks folder (from the sidebar) to Bookmarks toolbar
3) Crash occurs
Reporter | ||
Comment 1•23 years ago
|
||
Confirmed using Chimera/20020724, generating identical stack.
Severity: major → critical
Keywords: crash
Summary: Dragging Toolbar Bookmarks folder (from sidebar) to Bookmark toolbar results in crash(nsCOMPtr_base::begin_assignment(void)) → Dragging Toolbar Bookmarks folder (from sidebar) to Bookmark toolbar results in crash [@ nsCOMPtr_base::begin_assignment(void)]
Assignee | ||
Comment 5•23 years ago
|
||
Fixed; you can no longer drag the Toolbar Bookmarks folder to the toolbar, or
any other folder from the sidebar onto itself in the toolbar.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsCOMPtr_base::begin_assignment(void)]
You need to log in
before you can comment on or make changes to this bug.
Description
•