Fix for bug 160312: avoid crashes when dragging bookmark folders from the sidebar onto themselves in the bookmarks toolbar.